--- a/hw/misc/Kconfig
+++ b/hw/misc/Kconfig
@@ -172,6 +172,10 @@ config MCHP_PFSOC_SYSREG
 
 config SIFIVE_TEST
     bool
+    default n
+
+config RISCV_RPMI
+    bool
 
 config SIFIVE_E_PRCI
     bool
